Improve Java8 compatibility, fix errors